# DeadlineSaver

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  berandapage.cpp  berandapage.h  datamanager.cpp  datamanager.h  jadwalpage.cpp  jadwalpage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tugaspage.cpp  tugaspage.h
